[tool.poetry]
name="delfino-core"
version="7.4.2"
authors = ["Radek Lát <radek.lat@gmail.com>"]
description="Delfino core plugin"
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/radeklat/delfino-core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8.1"
delfino = ">=3.1.2"

black = {version = "*", optional = true}
isort = {version = "*", optional = true}
pyupgrade = {version = "*", optional = true}
pre-commit = {version = "*", optional = true}
pytest = {version = "*", optional = true}
coverage = {version = "*", optional = true}
pytest-cov = {version = "*", optional = true}
mypy = {version = "*", optional = true}
pylint = {version = "*", optional = true}
pycodestyle = {version = "*", optional = true}
pydocstyle = {version = "*", optional = true}
gitpython = {version = "*", optional = true}
shellingham = {version = "*", optional = true}
psutil = {version = "*", optional = true}
PyYAML = {version = "*", optional = true}
ruff = {version = "*", optional = true}

# https://python-poetry.org/docs/pyproject/#plugins
[tool.poetry.plugins]

[tool.poetry.plugins."delfino.plugin"]
"delfino-core" = "delfino_core.commands"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
isort = "^5.9"
coverage = "^7.0"
pylint = "^3.0"
mypy = "^1.4"
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-mock = "^3.6"
pre-commit = "^3.3"
pycodestyle = "^2.8"
pydocstyle = "^6.1"
shellingham = "^1.4"
psutil = "^5.9"
types-termcolor = "*"
types-toml = "^0.10.8.1"
types-psutil = "^5.9"
gitpython = "^3.1"
pyupgrade = "^3.7"
types-pyyaml = "^6.0.12.12"
ruff = "^0.1.14"

[tool.poetry.extras]
all = ["black", "isort", "pyupgrade", "pre-commit", "pytest", "coverage", "pytest-cov", "mypy", "pylint", "pycodestyle", "pydocstyle", "psutil", "gitpython", "PyYAML", "ruff"]
verify = ["black", "isort", "pyupgrade", "pre-commit", "pytest", "coverage", "pytest-cov", "mypy", "pylint", "pycodestyle", "pydocstyle", "psutil", "ruff"]
format = ["black", "isort", "pyupgrade", "pre-commit"]
test = ["pytest", "coverage", "pytest-cov"]
mypy = ["mypy"]
lint = ["pylint", "pycodestyle", "pydocstyle", "psutil", "ruff"]
dependencies_update = ["gitpython"]
pre_commit = ["PyYAML"]

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = "tests/unit tests/integration"
python_functions = "should_*"
junit_family = "xunit2"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = [

]

markers = [
]

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
follow_imports = "silent"

[[tool.mypy.overrides]]
# Source code dependencies
module = [
    "delfino.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "pep257"
match = "^(?!test_)(.*)(?<!config_parser)\\.py$"
add-ignore = [
    # See http://www.pydocstyle.org/en/stable/error_codes.html
    "D1",  # Missing docstrings. We rely on code reviews. Names are often descriptive enough and don't need additional docstring.
    "D202",  # "No blank lines allowed after function docstring" is false positive caused by black formatter.
    "D204",  # "1 blank line required after class docstring"
    "D401",  # "First line should be in imperative mood"
    "D413",  # "Missing blank line after last section"
]

[tool.ruff]
line-length = 120

[tool.delfino.plugins.local]
#branch_prefix = ""